# gamole

./: .env.example  .gitignore  README.md  bunfig.toml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
apps/api/: Dockerfile  alembic.ini
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/auth/: __init__.py  jwt.py  middleware.py
apps/api/app/orchestrator/: graph.py
apps/api/app/routes/: admin.py  chat.py  context.py  feedback.py  generation.py  health.py  linear.py  repositories.py  sync.py  teams.py
apps/api/app/services/: audit.py  entity_resolver.py  generation.py  overlap.py  persistence.py  quality.py
apps/api/tests/: conftest.py  test_agents.py  test_ast_chunker.py  test_auth.py  test_chat.py  test_discovery_agent.py  test_discovery_endpoint.py  test_entity_resolver.py  test_generation.py  test_health.py  test_indexer.py  test_linear_push.py  test_linear_push_service.py  test_pipeline_integration.py  test_quality.py  test_retrieval_reranker.py  test_retrieval_session_rollback.py  test_structurer.py  test_teams_sync.py  test_teams_update.py  test_trace.py
apps/web/: Dockerfile  components.json  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/app/chat/: page.tsx
apps/web/src/app/feedback/: page.tsx
apps/web/src/components/: editor.tsx  providers.tsx  sidebar.tsx  trace-panel.tsx
apps/web/src/hooks/: use-auth.tsx  use-generation-stream.ts
apps/web/src/lib/: api-client.ts  types.ts
(+15 files in other folders)
