[project]
name = "gamole"
version = "0.1.0"
description = "Gamole - AI-powered user story generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "litellm>=1.55.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "PyJWT>=2.10.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.2.0",
    "slowapi>=0.1.9",
    "rapidfuzz>=3.0.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-language-pack>=0.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "packages/gamole_types",
    "packages/gamole_db",
    "packages/gamole_ai",
    "packages/gamole_linear",
    "apps/api/app",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["packages", "apps/api"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
